# Holy_Sheet

./: README_.md
.github/workflows/: build.yml
client/: .gitignore  capacitor.config.ts  components.json  metadata.json  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
client/android/: .gitignore  capacitor.settings.gradle  settings.gradle
client/android/app/: build.gradle  capacitor.build.gradle
client/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
client/app/(app)/: layout.tsx
client/app/(app)/chat/: page.tsx
client/app/(app)/components/: Header.tsx  MobileSidebar.tsx  Sidebar.tsx
client/app/(app)/models/: page.tsx
client/app/api/chat/: route.ts
client/app/chat/: page.tsx  types.ts
client/app/chat/components/: ChatArea.tsx  ChatMessage.tsx  Header.tsx  (+7 more)
client/app/models/: page.tsx
client/app/summa/: page.tsx
client/components/landing/: Architecture.tsx  CoiLoader.tsx  ComparisonTable.tsx  FeatureGrid.tsx  Footer.tsx  Header.tsx  Hero.tsx  OfflineSpotlight.tsx  PersonaGrid.tsx  TrustSection.tsx  index.ts
client/components/providers/: root-provider.tsx
client/components/ui/: button.tsx  sheet.tsx
client/data/: messages.json
client/hooks/: networkStatusHook.ts  useStore.ts
client/lib/: aiService.ts  constants.ts  contextBuilder.ts  index.ts  llm.ts  modelLoader.ts  nativeLlama.ts  nativeModelManager.ts  navigation.ts  networkStatusHook.ts
client/llama-capacitor/: .gitignore  LlamaCapacitor.podspec  Package.swift  README.md  package.json  pnpm-lock.yaml  rollup.config.mjs
client/llama-capacitor/android/: build.gradle
client/llama-capacitor/android/src/main/cpp/: CMakeLists.txt  llama-jni.cpp
client/llama-capacitor/src/: definitions.ts  index.ts  web.ts
client/public/: coi-serviceworker.js
client/public/pyodide/: openpyxl-3.1.2-py2.py3-none-any.whl
client/scripts/: download_packages.mjs  download_pyodide.mjs  setupPyodide.mjs
client/store/: settingsStore.ts
client/types/: global.d.ts
server/: NewReadme.md  SLM_in_colab.ipynb  download_SLM.ipynb
(+15 files in other folders)
